// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description component should render correctly content 1`] = `
<div
  id="description"
>
  <h1>
    Cosi
  </h1>
</div>
`;

exports[`Description component should render correctly content with className 1`] = `
<div
  className="classa"
  id="description"
>
  <h1>
    Cosi
  </h1>
</div>
`;
